# r-agent

./: .gitignore
backend/: .env.example  config.yaml  langgraph.json  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/app/gateway/routers/: models.py  threads.py
