[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.3",
    "langgraph-api>=0.7.0,<0.8.0",
    "langgraph-cli[inmem]>=0.4.14",
    "langgraph-runtime-inmem>=0.22.1",
    "langgraph>=1.1.9",
    "langchain-openai>=0.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.1.0",
    "fastapi>=0.136.1",
]
